Add --enable-native-access=ALL-UNNAMED option
Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>